# azureContextBuilder

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: profiles.example.yml
story_context/: .gitignore  AGENTS.md  PLAN.md  README.md  ado.py  builder.py  cli.py  config.py  digest.py  fetcher.py  registry.py  renderer.py  utils.py
tests/: conftest.py  test_builder.py  test_cli.py  test_digest.py  test_fetcher.py  test_registry.py  test_renderer.py
